--- a/monografia/Backup/monografia.tex
+++ b/monografia/Backup/monografia.tex
@@ -31,39 +31,34 @@
     \textual
     \setcounter{page}{1}
 
-    % COMEÇO -------------------------------------------------------------
-
+        % COMEÇO
+    
         %\include{Conteudo/introducao}
 
         % BEGIN REVISÃO BIBLIOGRÁFICA
-        \include{Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente.tex}
-        \include{Conteudo/Comeco/RevisaoBibliografica/internet-das-coisas.tex}
-        \include{Conteudo/Comeco/RevisaoBibliografica/tecnologias.tex}
+        \include{Conteudo/RevisaoBibliografica/edificio-inteligente.tex}
+        \include{Conteudo/RevisaoBibliografica/internet-das-coisas.tex}
+        \include{Conteudo/RevisaoBibliografica/tecnologias.tex}
         % END REVISÃO BIBLIOGRÁFICA
-    % --------------------------------------------------------------------
 
-    % MEIO ---------------------------------------------------------------
-        % Proposta
-        \include{Conteudo/Comeco/proposta.tex}
-
-        % Explicando o nome dos componentes
-        \include{Conteudo/Comeco/nome-componentes.tex}
-
-        % Arquitetura
-        \include{Conteudo/Meio/arquitetura.tex}
+        
         %\include{Conteudo/cap2-exemplos}
         %\include{Conteudo/cap3} ....
         %\include{Conteudo/capX}
         %\include{Conteudo/capX+1-proposta}
-    % --------------------------------------------------------------------
 
-    % FIM ----------------------------------------------------------------
+        % MEIO
 
-        
+        %\include{Conteudo/capX+1-desenvolvimento-proposta}
+        %\include{Conteudo/capX+3-experimentos}
+
+        % FIM
+
+        %\include{Conteudo/conclusoes}
 
         %\nocite{*}
         \bibliography{Conteudo/bibliografia}
         
         %\include{Conteudo/anexos}
-    % --------------------------------------------------------------------  
+        
 \end{document}
