--- a/monografia/Conteudo/introducao.tex
+++ b/monografia/Conteudo/introducao.tex
@@ -1,6 +1,13 @@
 \chapter{Introdução} 
 \label{cap:introducao}
 
+% Introdução:
+
+% Objetivo do trabalho
+% Contextualização do problema
+% Estrutura do trabalho (explicando brevemente o que será abordado em cada seção)
+
+
 
 Esse capítulo deveria ser composto por: introdução, estado da arte, proposta,  justificativa, objetivos e organização da monografia. Uma introdução, como o próprio nome já diz, tem a função de introduzir o leitor ao tema, isto é, a partir dela tem-se uma visão total do trabalho de forma sucinta e objetiva.
 
