--- a/monografia/Conteudo/Comeco/RevisaoBibliografica/tecnologias.tex
+++ b/monografia/Conteudo/Comeco/RevisaoBibliografica/tecnologias.tex
@@ -35,6 +35,7 @@ O modelo ZigBee é principalmente definido em três camadas.
 \cite{Domingues2016}
 
 \section{Tasmota}
+\label{sec:tasmota}
 Tasmota é um software de código aberto que atua como firmware para SoC’s (System-on-a-Chip) ESP32 
 da Espressif e possibilita controle e comunicação personalizado com alguns dispositivos comerciais que são 
 baseados nesse SoC, como interruptores inteligentes, lâmpadas inteligentes ou controles infravermelho
