--- a/monografia/Conteudo/bibliografia.bib
+++ b/monografia/Conteudo/bibliografia.bib
@@ -385,3 +385,52 @@ and Building Management},
   url = {https://tasmota.github.io/docs/About},
   urldate = {18 de dezembro de 2023}
 }
+
+@misc{Kang2023,
+   abstract = {As cross-border access becomes more frequent, traditional perimeter-based network security models can no longer cope with evolving security requirements. Zero trust is a novel paradigm for cybersecurity based on the core concept of “never trust, always verify”. It attempts to protect against security risks related to internal threats by eliminating the demarcations between the internal and external network of traditional network perimeters. Nevertheless, research on the theory and application of zero trust is still in its infancy, and more extensive research is necessary to facilitate a deeper understanding of the paradigm in academia and the industry. In this paper, trust in cybersecurity is discussed, following which the origin, concepts, and principles related to zero trust are elaborated on. The characteristics, strengths, and weaknesses of the existing research are analysed in the context of zero trust achievements and their technical applications in Cloud and IoT environments. Finally, to support the development and application of zero trust in the future, the concept and its current challenges are analysed.},
+   author = {Hongzhaoning Kang and Gang Liu and Quan Wang and Lei Meng and Jing Liu},
+   doi = {10.3390/e25121595},
+   issn = {10994300},
+   issue = {12},
+   journal = {Entropy},
+   keywords = {cloud computing,internet of things,network security,zero trust},
+   month = {12},
+   publisher = {Multidisciplinary Digital Publishing Institute (MDPI)},
+   title = {Theory and Application of Zero Trust Security: A Brief Survey},
+   volume = {25},
+   year = {2023},
+}
+
+% LEMBRAR DE MUDAR ESSA REFERÊNCIA PRO JEITO CERTO DE DICIONÁRIO PELO AMOR DE DEUS
+@misc{opuslatin,
+    title = {{In: The Latin Dictionary}},
+    url = {http://latindictionary.wikidot.com/noun:opus},
+    language = {en},
+    author = {OPUS},
+    year = {2024},
+    urlaccessdate = {06 de junho de 2024}
+}
+
+@misc{opusnumber,
+  title = {What is an opus number?},
+  year = {2024},
+  url = {https://www.abc.net.au/listen/classic/read-and-watch/music-reads/what-is-an-opus-number/11228928},
+  urldate = {06 de junho de 2024}
+}
+
+@misc{beethoven1,
+  title = {How did Beethoven’s Symphony No.5 become so famous?},
+  year = {2024},
+  url = {https://www.aco.com.au/news/2023-november/why-is-beethoven-symphony-no-5-so-famous},
+  urldate = {06 de junho de 2024}
+}
+
+% LEMBRAR DE MUDAR ESSA REFERÊNCIA PRO JEITO CERTO DE DICIONÁRIO PELO AMOR DE DEUS
+@misc{maestro-cambridge,
+    title = {{In: Cambridge Dictionary}},
+    url = {https://dictionary.cambridge.org/dictionary/english-italian/maestro},
+    language = {en},
+    author = {MAESTRO},
+    year = {2024},
+    urlaccessdate = {06 de junho de 2024}
+}
