--- a/monografia/Conteudo/Meio/Opus/introducao.tex
+++ b/monografia/Conteudo/Meio/Opus/introducao.tex
@@ -17,20 +17,29 @@ A aplicação é organizada em quatro módulos principais, como ilustrado na fig
 \begin{figure}[h!]
     \conteudoFigura
     [Elaborado pelo Autor (2024)]
-    {0.4}
+    {0.7}
     {opus1.png}
     {Módulos do Opus}
     {fig:opus1}
 \end{figure}
 
-Alguns módulos podem ser alterados conforme é descrito no arquivo de configuração do \emph{Opus}, o arquivo de configuração é um arquivo texto
+Alguns módulos podem ser alterados conforme for descrito no arquivo de configuração do \emph{Opus}, o arquivo de configuração é um arquivo texto
 escrito em YAML, onde o usuário pode alterar o comportamento do \emph{Opus} sem a necessidade de alterar o código fonte.
 Um exemplo de arquivo de configuração é mostrado na figura \ref{fig:opus2}.
 \begin{figure}[h!]
     \conteudoFigura
     [Elaborado pelo Autor (2024)]
-    {0.3}
+    {0.2}
     {opus-config.png}
     {Exemplo de arquivo de configuração}
     {fig:opus2}
 \end{figure}
+
+
+Módulos como \emph{drivers} e \emph{interfaces} terão seus objetos carregados no ambiente de execução do \emph{Opus}
+através de um dicionário, onde a chave é o nome do módulo e o valor é objeto.
+Sendo assim para acessar um \emph{driver} ou \emph{interface} basta acessar o dicionário com o nome do módulo como no exemplo
+a seguir:
+\begin{lstlisting}[language=Python]
+    interfaces['nome_da_interface'].metodo_desejado()
+\end{lstlisting}
