--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -33,7 +33,7 @@
 
     % COMEÇO -------------------------------------------------------------
 
-        %\include{Conteudo/introducao}
+        \include{Conteudo/introducao}
 
         % BEGIN REVISÃO BIBLIOGRÁFICA
         \include{Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente.tex}
@@ -56,6 +56,9 @@
         % BEGIN Opus
         \include{Conteudo/Meio/Opus/introducao.tex}
         \include{Conteudo/Meio/Opus/interfaces.tex}
+        \include{Conteudo/Meio/Opus/drivers.tex}
+        \include{Conteudo/Meio/Opus/nucleo.tex}
+        \include{Conteudo/Meio/Opus/banco_de_dados.tex}
         % END Opus
 
         %\include{Conteudo/cap2-exemplos}
@@ -66,7 +69,9 @@
 
     % FIM ----------------------------------------------------------------
 
-        
+        \include{Conteudo/Fim/resultados.tex}
+        \include{Conteudo/Fim/conclusao.tex}
+        \include{Conteudo/Fim/trabalhos_futuros.tex}
 
         %\nocite{*}
         \bibliography{Conteudo/bibliografia}
