--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -18,10 +18,10 @@
     \input{Automatico/folhaRosto}
     \input{Automatico/aprovacao}
     
-    \input{Conteudo/Prologo/dedicatoria}
-    \input{Conteudo/Prologo/agradecimentos}
-    \input{Conteudo/Prologo/epigrafe}
-    \input{Conteudo/Prologo/resumo}
+%    \input{Conteudo/Prologo/dedicatoria}
+%    \input{Conteudo/Prologo/agradecimentos}
+%    \input{Conteudo/Prologo/epigrafe}
+%    \input{Conteudo/Prologo/resumo}
     
     \input{Automatico/lista_figuras}
     %\input{Automatico/lista_tabelas}
@@ -33,7 +33,7 @@
 
     % COMEÇO -------------------------------------------------------------
 
-        \include{Conteudo/introducao}
+    %    \include{Conteudo/introducao}
 
         % BEGIN REVISÃO BIBLIOGRÁFICA
         \include{Conteudo/Comeco/RevisaoBibliografica/edificio-inteligente.tex}
@@ -44,20 +44,20 @@
 
     % MEIO ---------------------------------------------------------------
         % Proposta
-        \include{Conteudo/Meio/proposta.tex}
+    %    \include{Conteudo/Meio/proposta.tex}
 
         % Arquitetura Header
-        \include{Conteudo/Meio/arquitetura1.tex}
+    %    \include{Conteudo/Meio/arquitetura1.tex}
         % Explicando o nome dos componentes
-        \include{Conteudo/Meio/nome-componentes.tex}
+    %    \include{Conteudo/Meio/nome-componentes.tex}
         % Explicando a arquitetura
-        \include{Conteudo/Meio/arquitetura.tex}
+    %    \include{Conteudo/Meio/arquitetura.tex}
 
         % BEGIN Opus
-        \include{Conteudo/Meio/Opus/introducao.tex}
-        \include{Conteudo/Meio/Opus/interfaces.tex}
-        \include{Conteudo/Meio/Opus/drivers.tex}
-        \include{Conteudo/Meio/Opus/nucleo.tex}
+    %    \include{Conteudo/Meio/Opus/introducao.tex}
+    %    \include{Conteudo/Meio/Opus/interfaces.tex}
+    %    \include{Conteudo/Meio/Opus/drivers.tex}
+    %    \include{Conteudo/Meio/Opus/nucleo.tex}
         %\include{Conteudo/Meio/Opus/banco_de_dados.tex}
         % END Opus
 
@@ -69,9 +69,9 @@
 
     % FIM ----------------------------------------------------------------
 
-        \include{Conteudo/Fim/resultados.tex}
-        \include{Conteudo/Fim/conclusao.tex}
-        \include{Conteudo/Fim/trabalhos_futuros.tex}
+    %    \include{Conteudo/Fim/resultados.tex}
+    %    \include{Conteudo/Fim/conclusao.tex}
+    %    \include{Conteudo/Fim/trabalhos_futuros.tex}
 
         %\nocite{*}
         \bibliography{Conteudo/bibliografia}
