--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -47,7 +47,7 @@
     %    \include{Conteudo/Meio/proposta.tex}
 
         % Arquitetura Header
-    %    \include{Conteudo/Meio/arquitetura1.tex}
+        \include{Conteudo/Meio/arquitetura.tex}
         % Explicando o nome dos componentes
     %    \include{Conteudo/Meio/nome-componentes.tex}
         % Explicando a arquitetura
