--- a/monografia/Conteudo/Meio/arquitetura.tex
+++ b/monografia/Conteudo/Meio/arquitetura.tex
@@ -1,4 +1,16 @@
+\chapter{Arquitetura}
 \section{Camada Física}
+
+A arquitetura proposta é ilustrada na figura \ref{fig:arquitetura1}.
+\begin{figure}[h!]
+    \conteudoFigura
+    [Elaborado pelo Autor (2024)]
+    {0.20}
+    {overall1.png}
+    {Arquitetura completa}
+    {fig:arquitetura1}
+\end{figure}
+
 \label{arq-subsec:camada-fisica}
 Camada física é o nome dado por este trabalho a tudo que tem por característica
 principal, seu hardware, como é o caso de um microcontrolador e um smartphone.
