--- a/monografia/monografia.tex
+++ b/monografia/monografia.tex
@@ -41,7 +41,7 @@
     %--------------------------------------------------------------
     % Parte I - Introdução
     %--------------------------------------------------------------
-    %\include{Conteudo/Introducao/introducao.tex} % Novo arquivo: Introdução
+    \include{Conteudo/introducao.tex} % Novo arquivo: Introdução
 
     %--------------------------------------------------------------
     % Parte II - Revisão Bibliográfica
