--- a/monografia/Conteudo/Meio/arquitetura1.tex
+++ b/monografia/Conteudo/Meio/arquitetura1.tex
@@ -10,3 +10,10 @@ A arquitetura proposta é ilustrada na figura \ref{fig:arquitetura1}.
     {Arquitetura completa}
     {fig:arquitetura1}
 \end{figure}
+
+A arquitetura desse sistema consiste em três peças fundamentais, são elas: 
+\emph{Servidores Locais}, \emph{Servidor Remoto} e \emph{Interfaces de Usuário}.
+
+\section{Servidores Locais}
+\label{arq-sec:servidores-locais}
+
