--- a/monografia/Conteudo/introducao.tex
+++ b/monografia/Conteudo/introducao.tex
@@ -1,7 +1,12 @@
 \chapter{Introdução} 
 
 % Contextualização do problema
+Dispositivos inteligentes conectados a internet (IoT) tem tido um crescimento constante nos últimos anos, com previsão da década de 2020
+terminar com mais de 30 bilhões de dispositivos conectados, 60\% dos quais serão voltados ao consumidor final\cite{statista-iot-connected-devices},
 
+
+Dispositivos de Internet das Coisas (IoT) tem tido um crescimento constante nos últimos anos, a previsão é de que a década de 2020 termine
+com mais de 30 bilhões de dispositivos conectados, 60\% dos quais serão utilizados pelo consumidor final
 % Justificativa
 
 % Problema de Pesquisa
